namespace Vis.Common.Models
{
    public class Visitor
    {
        public Guid Guid;
        public int OrganisationId;
        public string Name;
    }
}
